2008-07-08  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_set_property):
	toggle showing up the note.
	(im_chooser_simple_get_widget): show up the note as needed.

	* src/main.c (_im_changed_cb): new.
	(_dialog_response_cb): Add GTK_RESPONSE_APPLY handler.
	(main): run as GNOME apps to deal with the log out button.

	* configure.ac: requires libgnomeui-2.0 again.

2008-06-27  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list): Invoke
	exit(2) instead of gtk_main_quit().

2008-06-12  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_prefs_button_on_clicked):
	code clean up for new imsettings API.
	(im_chooser_simple_g_error_quark): new.
	(im_chooser_simple_activate_progress): delay display for the progress
	window.
	(im_chooser_simple_action_loop): do not try to get information for preference apps if IM is being turned off.
	(_im_chooser_simple_update_im_list): check the version before doing
	something. and reload the services as needed.

2008-06-04  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_enable_im_on_toggled):
	more error handling.
	(im_chooser_simple_prefs_button_on_clicked): likewise.
	(im_chooser_simple_im_start_cb): likewise.
	(im_chooser_simple_im_stop_cb): likewise.
	(im_chooser_simple_instance_init): likewise.
	(im_chooser_simple_show_error): new function.
	(im_chooser_simple_get_widget): get rid of the note.

	* src/main.c: clean up and trivial changes for imsettings-0.100.

	* README: Update since imsettings is now separate project.

2008-05-14  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_instance_init):
	makes the progress window not resizable and not deletable window.

	* src/im-chooser-simple.c (_im_chooser_simple_update_im_list): clean up.

	* src/im-chooser-simple.c (im_chooser_simple_instance_init):
	Make the window border to the progress window. (RH#444818)
